data/Java/03-visit-private/5/[M]Error.txt
https://stackoverflow.com/questions/23463427/variable-has-private-access
Shape.java:38: error: color has private access in Shape
        setColor(color);
                 ^